# app-bootstrap

./: .coveragerc  .env.TEMPLATE  .flake8  .gitignore  .pre-commit-config.yaml  README.TEMPLATE.md  README.md  bootstrap.py  docker-compose.yml  pyproject.toml  requirements-init.txt  ruff.toml
.circleci/: config.yml
builders/: bootstrap.py  process_modules.py  process_toml.py
docs/: channels-websocket.md  circleci.md
myapp/accounts/: admin.py
myapp/accounts/factories/: user.py
myapp/accounts/migrations/: 0001_initial.py
myapp/accounts/models/: user.py
myapp/accounts/serializers/: __init__.py  user_serializer.py
myapp/accounts/tests/models/: test_user.py
myapp/accounts/tests/serializers/: test_user_serializer.py
myapp/config/: _allauth_urls.py  asgi.py  celery.py  routing.py  urls.py  wsgi.py
myapp/config/settings/: _account_base.py  _auth_base.py  _redis_base.py  _redischannels_base.py  _redischannels_dev.py  base.py  dev.py  test.py
myapp/status/: views.py
myapp/status/tests/: test_views.py
myapp/ws_app/: consumers.py  routing.py
requirements/: base.txt  dev.txt  test.txt
