[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
exclude = '''
/(
    \.git
 |  \.pytest_cache
 |  \.vscode
 |  __pycache__
 |  .venv
 |  build
 |  coverage
 |  dist
 |  htmlcov
 |  migrations
 |  node_modules
)/
'''
line-length = 88
preview = true
target-version = ["py311"]

[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "This is MYAPP"
name = "myapp"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
cytoolz = "^0.12.1"
dj-rest-auth = {extras = ["with-social"], version = "^4.0.0"}
django = "^4.2"
django-cors-headers = "^3.14.0"
django-debug-toolbar = "^4.0.0"
django-environ = "^0.10.0"
django-extensions = "^3.2.1"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
gunicorn = "^20.1.0"
psycopg = "^3.1.8"
python = "^3.11"
urllib3 = "^1.26.15"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coveralls = "^3.3.1"
factory-boy = "^3.2.1"
faker = "^18.4.0"
freezegun = "^1.2.2"
ipdb = "^0.13.13"
mock = "^5.0.2"
pre-commit = "^3.2.2"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.10.0"
ruff = "^0.0.264"
toml-sort = "^0.23.1"
